# confused-agents

./: .env.example  .gitignore  ARTIFACT_README.md  BASELINES.md  EMPIRICAL_DESIGN.md  ENV_SETUP.md  FIXTURE_AUTHORING.md  FIXTURE_AUTHORING_V2.md  PURPOSE_LATTICE.md  README.md  THEOREMS.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.venv_agentdojo/: pyvenv.cfg
capguard/: capability.py  irreversibility.py  policy.py  policy_authority.py  policy_purpose.py  policy_types.py  provenance.py  proxy.py  purpose_lattice.py
defenses/: __init__.py  base.py  camel_style.py  capguard.py  full_stack.py  integrity_only.py  model_safety.py  none.py  registry.py  spotlighting.py  trajectory_monitor.py
docs/: ablation_openmodel_analysis.md  authority_calculus.md  capguard_human_driven.md  citation_ready_framework.md  complementarity_implementation_analysis.md  enforcement_gate.md  evaluation_coverage_reviewer_faq.md  evaluation_reference.md  external_benchmarks_positioning.md  fides_case_study.md  fides_case_study_runbook.md  full_pipeline_analysis.md  harness_validation_gates.md  limitations.md  observability_framework.md  phase3_theorem_workplan.md  phase_plan_500_runs.md  repo_reference.md  reproduction.md  staged_production_campaign_runbook.md  threat_model.md  trace_schema.md
harness/: adaptive_attacker.py  coverage_matrix.py  degradation.py  evaluation_manifest.py  matrix_generator.py  metrics.py  multi_turn_runner.py  run_attack.py  run_benign.py  run_corpus.py  run_matrix.py  run_observability_matrix.py  run_report.py  scenario_prompt_validation.py  (+3 more)
(+54919 files in other folders)
